--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <title>Hello, world!</title>
 </head>
@@ -18,18 +19,21 @@
     <p>Тестируем отрпавку почты</p>
     <form id="feedback">
         <label for="text" class="d-block fw-bolder">Текст</label>
-        <textarea id="text" class="d-block mb-4"></textarea>
+        <textarea id="text" class="d-block mb-4" required></textarea>
         <button class="btn btn-primary" type="submit">Отправить</button>
     </form>
+    <div class="alert alert-success mt-4 d-none" id="result" role="alert">
+        <strong>Заявка отправлена!</strong> Скоро мы с Вами свяжемся.
+    </div>
 </div>
-
-
 
 
 <!-- Optional JavaScript; choose one of the two! -->
 
 <!-- Option 1: Bootstrap Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 
 <!-- Option 2: Separate Popper and Bootstrap JS -->
 <!--
@@ -39,6 +43,34 @@
 
 <script>
 
+    document.getElementById('feedback')
+        .addEventListener('submit', (event) => {
+
+            event.preventDefault();
+
+            const textEl = document.getElementById('text');
+
+            // готовим данные к отправке на сервер
+            const formData = new FormData();
+            formData.set('text', textEl.value);
+
+            // отправляем запрос насервер
+            fetch('http://127.0.0.1:8080/send_email.php', {
+                method: 'POST',
+                body: formData
+            }).then((resp) => {
+
+                // проверяем ответ от сервера
+                resp.json().then((data) => {
+
+                    if (data.result) {
+                        document.getElementById('result').classList.toggle('d-none')
+                        textEl.value = '';
+                    }
+                })
+            });
+
+        })
 </script>
 </body>
 </html>
